[package]
name = "nuuid"
version = "0.3.1-alpha.0"
authors = ["Diana"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A new, no_std, UUID Library"
repository = "https://github.com/DianaNites/uuid"
documentation = "https://docs.rs/nuuid"
readme = "README.md"
keywords = ["uuid", "guid", "unique"]
categories = ["no-std", "parser-implementations"]


[dependencies]
md-5 = { version = "0.9.1", default-features = false }
sha-1 = { version = "0.9.4", default-features = false }
serde = { version = "1.0.123", optional = true, default-features = false, features = ["derive"] }

[dependencies.rand]
version = "0.8.3"
default-features = false
features = ["std_rng"]

[dev-dependencies]
criterion = "0.3.4"
uuid_ = { version = "0.8.2", package = "uuid", features = ["v4", "v5"] }

[features]
default = ["getrandom", "std"]

# Implements some traits from std.
std = []

# Enable usage of `getrandom`.
# This can be used in no_std environments, but usually requires OS system libraries.
getrandom = ["rand/getrandom"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
# all-features = true
# default-target = "thumbv6m-none-eabi"
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "README.md"
search = "nuuid = .*"
replace = "nuuid = \"{{version}}\""

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-header -->"
replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-url -->"
replace = "<!-- next-url -->\n[Unreleased]: https://github.com/DianaNites/{{crate_name}}/compare/{{tag_name}}...HEAD"
exactly = 1
